<resources>
    <string name="app_name">User Directory</string>
    <string name="user_list_title">Users</string>
    <string name="add_user">Add User</string>
    <string name="user_details">User Details</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="website">Website</string>
    <string name="company">Company</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_phone">Enter phone</string>
    <string name="enter_address">Enter address</string>
    <string name="enter_website">Enter website</string>
    <string name="enter_company">Enter company</string>
    <string name="required_field">This field is required</string>
    <string name="user_added_successfully">User added successfully</string>
</resources>
